--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,20 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "files": [
+    "dist/**/*",
+    "migrations/*",
+    "scripts/*"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "mikro-orm": {
+    "useTsNode": false,
+    "configPaths": [
+      "./src/config/mikro-orm.config.ts",
+      "./dist/config/mikro-orm.config.js"
+    ]
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -20,6 +34,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/config": "~3.0.0",
+    "@nestjs/swagger": "~7.1.10",
+    "@mikro-orm/cli": "~5.7.14",
+    "@mikro-orm/core": "~5.7.14",
+    "@mikro-orm/migrations": "~5.7.14",
+    "@mikro-orm/nestjs": "~5.2.1",
+    "@mikro-orm/mysql": "~5.7.14",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
