--- a/app/config/.env
+++ b/app/config/.env
@@ -2,9 +2,15 @@
 #================[ General section ]==============================
 API_PREFIX=api
 
+
 #================[ Databases section ]============================
 MYSQL_PORT=3306
 MYSQL_HOST=localhost
 MYSQL_DB=userway
 MYSQL_USER=user
 MYSQL_PASSWORD=1qE4tYuJ7oO97Y
+
+
+#================[ REDIS section ]================================
+REDIS_HOST=localhost
+REDIS_PORT=6379
