--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "redis":"~4.6.8",
     "class-transformer": "~0.5.1",
     "class-validator": "~0.14.0",
     "@nestjs/config": "~3.0.0",
