--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -12,3 +12,8 @@ services:
       - "3306:3306"
     volumes:
       - ./data/mysql:/var/lib/mysql
+  redis:  
+    container_name: redis
+    image: redis:latest
+    ports:
+      - "6379:6379"
